--- a/templates/index.html
+++ b/templates/index.html
@@ -26,13 +26,8 @@
 
     <h1>Sign up now.</h1>
     <p class="marketing-byline">It's free.</p>
-    <div class="row-fluid">
-        <div class="span3 offset3">
-            <a class="btn btn-primary btn-large btn-flat" href="#">Sign up with Twitter</a>
-        </div>
-        <div class="span3">
-            <a class="btn btn-primary btn-large btn-flat" href="#">Sign up with Facebook</a>
-        </div>
+    <div class="row-fluid text-center">
+        <a class="btn btn-primary btn-large btn-flat" href="/signup/">Sign up</a>
     </div>
 
 </div>
