--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,7 +29,7 @@
     <div class="control-group">
         <label class="control-label" for="email">Email</label>
         <div class="controls">
-            <input type="text" id="email" placeholder="email@domain.com" /><span class="help-inline">{{ form.email.errors }}</span>
+            <input type="text" id="email" name="email" placeholder="email@domain.com" /><span class="help-inline">{{ form.email.errors }}</span>
         </div>
     </div>
     <div class="control-group">
