--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="form-actions">
-	    <button type="submit" class="btn btn-primary">Submit</button>
+	    <button type="submit" class="btn btn-primary btn-large btn-flat">Submit</button>
     </div>
 </form>
 {% endblock %}
