--- a/templates/index.html
+++ b/templates/index.html
@@ -11,14 +11,14 @@
                 <i class="icon-group"></i>&nbsp;<i class="icon-money"></i>
             </div>
             <h2>Social</h2>
-            <p>Provide your customers with an easy way to submit service requests. Achieve increased customer satisfaction/retention and hence increased revenues. <a href="/howitworks/business">Learn more &raquo;</a></p>
+            <p>listypedia is simple way to create and manage lists. It enables the users to share list with friends and colleagues and also invite them to collaborate</p>
         </div>
         <div class="span4">
             <div class="about-image">
                 <i class="icon-user"></i>&nbsp;<i class="icon-qrcode"></i>
             </div>
             <h2>Curated</h2>
-            <p>Never have things not working. Submit and track all your service requests at one place without the hassle of long waiting calls and inidividual support emails and websites. <a href="/howitworks/consumer">Learn more &raquo;</a></p>
+            <p>Only the creators and the collabarators of the list can add to the lists. This ensures the quality of the items that are added to the lists</p>
         </div>
     </div>
 
