slug url changes, design changes for list page

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,12 @@
                         </button>
                         <a href="/" class="brand lobster">Listypedia</a>
                         <div class="nav-collapse collapse">
-                            <ul class="nav">
+                            <ul class="nav pull-right">
+                                {% if user.is_authenticated %}
+                                <li><a class="btn btn-primary btn-flat" href="/logout/"><i class="icon-user icon-white"></i>Sign Out</a></li>
+                                {% else %}
+                                <li><a class="btn btn-primary btn-flat" href="/login/"><i class="icon-user icon-white"></i>Sign In</a></li>
+                                {% endif %}
                             </ul>
                         </div>
                         <!--/.nav-collapse -->
