small home page ui fixes

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,12 @@
     <hr class="soften">
     <div class="row-fluid">
         <div class="span4 offset2">
-            <div class="about-image">
-                <i class="icon-group"></i>&nbsp;<i class="icon-money"></i>
-            </div>
             <h2>Social</h2>
-            <p>listypedia is simple way to create and manage lists. It enables the users to share list with friends and colleagues and also invite them to collaborate</p>
+            <p>Listypedia is simple way to create and manage lists. It enables the users to share list with friends and colleagues and also invite them to collaborate.</p>
         </div>
         <div class="span4">
-            <div class="about-image">
-                <i class="icon-user"></i>&nbsp;<i class="icon-qrcode"></i>
-            </div>
             <h2>Curated</h2>
-            <p>Only the creators and the collabarators of the list can add to the lists. This ensures the quality of the items that are added to the lists</p>
+            <p>Only the creators and the collabarators of the list can add to the lists. This ensures the quality of the items that are added to the lists.</p>
         </div>
     </div>
 
