--- a/templates/view_list.html
+++ b/templates/view_list.html
@@ -29,6 +29,8 @@
         <div class="span3">
             <a class="btn btn-primary btn-large btn-flat btn-block" href="/list/{{ list.slug }}/item/add/"><i class="icon-plus icon-white"></i> Add Item</a>
             <br>
+            <a class="btn btn-success btn-large btn-flat btn-block" href="/list/follow/"><i class="icon-check icon-white"></i> Follow List</a>
+            <br>
             <h4>Created By</h4>
             {{ list.user.first_name }} {{ list.user.last_name}}
             {% if collabarators %}
