-Fix login_required issues -Use inbuilt login and logout views -Fix pylint warnings -Moved the email templates to a separate folder

--- a/templates/email/follow_confirmation_email.html
+++ b/templates/email/follow_confirmation_email.html
@@ -1,4 +1,4 @@
-{% extends "base_email.html" %}
+{% extends "email/base_email.html" %}
 {% block email_greeting %}
 Hi, {{user.first_name}}&nbsp;{{user.last_name}}
 {% endblock %}
