--- a/templates/email/item_add_notification_email.html
+++ b/templates/email/item_add_notification_email.html
@@ -1,4 +1,4 @@
-{% extends "base_email.html" %}
+{% extends "email/base_email.html" %}
 {% block email_greeting %}
 Hi, {{user.first_name}}&nbsp;{{user.last_name}}
 {% endblock %}
