--- a/templates/follow_confirmation.html
+++ b/templates/follow_confirmation.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="marketing">
-	You will recieve an email notification when a new item is added to <a href="http://www.listypedia.com/list/{{list.slug}}">{{list.name}}</a>
-    <p class="marketing-byline">Search for other interesting lists.</p>
+    <h1>You are now following <a href="/list/{{list.slug}}">{{list.name}}</a></h1>
+	<p class="lead">You will recieve an email notification when a new item is added</p>
     <br>
+    <p class="marketing-byline">Search for other interesting lists.</p>
     <div class="row">
         <div class="span4 offset4">
             <form class="form-search" action="/search/" method="POST">
