some more work on invitation workflow

--- a/templates/login.html
+++ b/templates/login.html
@@ -32,6 +32,7 @@
     <input type="hidden" name="next" value="{{ next }}" />
     <div class="form-actions">
         <button type="submit" class="btn btn-primary btn-large btn-flat">Submit</button>
+        <a href="/signup" class="btn btn-primary btn-large btn-info btn-flat">Sign Up?</a>
     </div>
 </form>
 {% endblock %}
