--- a/templates/view_list.html
+++ b/templates/view_list.html
@@ -42,7 +42,7 @@
             <form action="/list/unfollow/" method="post">
             	{% csrf_token %}
             	<input type="hidden" name="list_id" value="{{list.id}}"/>
-            	<button type="submit" class="btn btn-success btn-large btn-flat btn-block" href="/list/unfollow/"><i class="icon-remove icon-white"></i> UnFollow List</button>
+            	<button type="submit" class="btn btn-danger btn-large btn-flat btn-block" href="/list/unfollow/"><i class="icon-remove icon-white"></i> Unfollow List</button>
             </form>
             {% endif %}
             {% if creator %}
