--- a/templates/collaboration_invitation.html
+++ b/templates/collaboration_invitation.html
@@ -2,9 +2,9 @@
 {% load humanize %}
 {% block content %}
 {% if list %}
-<div class="marketing">
+<div class="header">
     <h1>{{ list.name }}</h1>
-    <p class="marketing-byline">{{ list.description }}</p>
+    <p class="header-byline">{{ list.description }}</p>
 </div>
 <hr />
 <div class="row">
