--- a/templates/base.html
+++ b/templates/base.html
@@ -67,5 +67,7 @@
         <![endif]-->
         <script src="http://code.jquery.com/jquery-1.8.2.min.js" type="text/javascript"></script>
         <script src="/site_media/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+        {% block extrajs %}
+        {% endblock %}
     </body>
 </html>
