--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/site_media/bootstrap/css/bootstrap.min.css" media="screen" />
         <link rel="stylesheet" href="/site_media/bootstrap/css/bootstrap-responsive.min.css" media="screen" />
         <link rel="stylesheet" type="text/css" href="/site_media/css/index.css" />
-        <link href='http://fonts.googleapis.com/css?family=Lobster|Ubuntu' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
         <link rel="shortcut icon" href="/site_media/images/favicon.png" />
         {% block includecss %}
         {% endblock %}
