--- a/templates/create_list.html
+++ b/templates/create_list.html
@@ -3,7 +3,7 @@
 <div class="page-header">
     <h1>Create List</h1>
 </div>
-<form class="form-horizontal" action="/list/create/" method="POST">
+<form class="form-vertical" action="/list/create/" method="POST">
     {% csrf_token %}
     <div class="control-group">
         <label class="control-label" for="name">Name</label>
