--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,36 +6,36 @@
 <div class="alert alert-info">
     All fields are required.
 </div>
-<form class="form-horizontal" action="/signup/" method="POST">
+<form class="form-horizontal form-vertical" action="/signup/" method="POST">
     {% csrf_token %}
     <div class="control-group">
         <label class="control-label" for="first_name">First Name</label>
         <div class="controls">
-            <input type="text" id="first_name" name="first_name" maxlength="30" placeholder="Frank" /><span class="help-inline">{{ form.first_name.errors }}</span>
+            <input type="text" class="span5" id="first_name" name="first_name" maxlength="30" placeholder="Frank" /><span class="help-inline">{{ form.first_name.errors }}</span>
         </div>
     </div>
     <div class="control-group">
         <label class="control-label" for="last_name">Last Name</label>
         <div class="controls">
-            <input type="text" id="last_name" name="last_name" maxlength="30" placeholder="Chu" /><span class="help-inline">{{ form.last_name.errors }}</span>
+            <input type="text" class="span5" id="last_name" name="last_name" maxlength="30" placeholder="Chu" /><span class="help-inline">{{ form.last_name.errors }}</span>
         </div>
     </div>
     <div class="control-group">
         <label class="control-label" for="username">Username</label>
         <div class="controls">
-            <input type="text" id="username" name="username" maxlength="30" placeholder="frankchu" /><span class="help-inline">{{ form.username.errors }}</span>
+            <input type="text" class="span5" id="username" name="username" maxlength="30" placeholder="frankchu" /><span class="help-inline">{{ form.username.errors }}</span>
         </div>
     </div>
     <div class="control-group">
         <label class="control-label" for="email">Email</label>
         <div class="controls">
-            <input type="text" id="email" name="email" placeholder="email@domain.com" /><span class="help-inline">{{ form.email.errors }}</span>
+            <input type="text" class="span5" id="email" name="email" placeholder="email@domain.com" /><span class="help-inline">{{ form.email.errors }}</span>
         </div>
     </div>
     <div class="control-group">
         <label class="control-label" for="password">Password</label>
         <div class="controls">
-            <input type="password" id="password" name="password" placeholder="Password" /><span class="help-inline">{{ form.password.errors }}</span>
+            <input type="password" class="span5" id="password" name="password" placeholder="Password" /><span class="help-inline">{{ form.password.errors }}</span>
         </div>
     </div>
     <div class="form-actions">
