--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -5,16 +5,17 @@
 </div>
 <form class="form-vertical" action="/list/{{ list.slug }}/item/add/" method="POST">
     {% csrf_token %}
+    <input type="hidden" name="s" value="{{ source }}">
     <div class="control-group">
         <label class="control-label" for="name">Name</label>
         <div class="controls">
-            <input class="input-xxlarge" type="text" id="name" name="name" maxlength="300" placeholder="Clever name for the item" /><span class="help-inline">{{ form.name.errors }}</span>
+            <input class="input-xxlarge" type="text" id="name" name="name" maxlength="300" placeholder="Clever name for the item" value="{{ name }}" /><span class="help-inline">{{ form.name.errors }}</span>
         </div>
     </div>
     <div class="control-group">
         <label class="control-label" for="url">URL</label>
         <div class="controls">
-            <input class="input-xxlarge" type="text" id="url" name="url" maxlength="300" placeholder="Can I haz a hyperlink to the itme?" /><span class="help-inline">{{ form.url.errors }}</span>
+            <input class="input-xxlarge" type="text" id="url" name="url" maxlength="300" placeholder="Can I haz a hyperlink to the itme?" value="{{ url }}" /><span class="help-inline">{{ form.url.errors }}</span>
         </div>
     </div>
     <div class="control-group">
