--- a/templates/view_list.html
+++ b/templates/view_list.html
@@ -69,7 +69,11 @@
             	<br>
             {% endif %}
             <div>
-                <h3>Share list</h3>
+                <h4>Listypedia Bookmarklet</h4>
+                <a class="btn btn-primary btn-large btn-flat btn-block" title="You can use bookmarklet to share item from anywhere. Just drag the bookmarklet to your bookmarks bar." data-toogle="tooltip" href="javascript:var%20_d=document;var%20_e=encodeURIComponent;var%20n=_d.title;var%20u=_d.location.href;var%20w=window.open('http://localhost:8000/b/lists/?n='+_e(n)+'&u='%20+%20_e(u),%20'postOnListypedia',%20'width=600,height=600');"><i class="icon-share icon-white"></i> List it</a>
+            </div>
+            <div>
+                <h4>Share list</h4>
                 <br/>
                 <fb:like href="http://www.listypedia.com/list/{{ list.slug }}/" send="false" layout="box_count" width="450" show_faces="true" action="like"></fb:like>
                 &nbsp;&nbsp;&nbsp;
