--- a/templates/email/item_add_notification_email.html
+++ b/templates/email/item_add_notification_email.html
@@ -1,9 +1,12 @@
-{% extends "email/base_email.html" %}
+{% extends "email/base.html" %}
 {% block email_greeting %}
-Hi, {{user.first_name}}&nbsp;{{user.last_name}}
+Hello {{user.first_name}}&nbsp;{{user.last_name}}!
 {% endblock %}
 {% block email_body %}
-{{user.username}} added {{item.name}} to {{list.name}}
+{{user.first_name}} added {{item.name}} to {{list.name}}
 <br>
 See the full list at <a href="http://www.listypedia.com/list/{{list.slug}}">{{list.name}}</a>
+<br/>
+<br/>
+Team Listypedia.
 {% endblock %}
